allow to configure huge trees list