@@ -1,5 +1,9 @@
 package com.slymask3.instantblocks.config;
 
+import com.slymask3.instantblocks.config.entry.ColorSet;
+import com.slymask3.instantblocks.config.entry.HugeTree;
+import net.minecraft.world.level.block.Blocks;
+
 import java.util.Arrays;
 import java.util.List;
 
@@ -16,7 +20,6 @@ public interface IConfig {
     default int RAILS_AMOUNT() { return Defaults.RAILS_AMOUNT; }
     default int MINING_LADDER_LAYER() { return Defaults.MINING_LADDER_LAYER; }
     default int XP_AMOUNT() { return Defaults.XP_AMOUNT; }
-    default int TREE_SIZE() { return Defaults.TREE_SIZE; }
     default int RADIUS_DOME() { return Defaults.RADIUS_DOME; }
 
     default int MAX_LIQUID() { return Defaults.MAX_LIQUID; }
@@ -28,6 +31,9 @@ public interface IConfig {
     default int SKYDIVE_WATER() { return Defaults.SKYDIVE_WATER; }
     default int SKYDIVE_RADIUS() { return Defaults.SKYDIVE_RADIUS; }
     default List<ColorSet> SKYDIVE_PRESETS() { return Defaults.SKYDIVE_PRESETS; }
+
+    default int TREE_SIZE() { return Defaults.TREE_SIZE; }
+    default List<HugeTree> HUGE_TREES() { return Defaults.HUGE_TREES; }
 
     default int WEIGHT_WHEAT() { return Defaults.WEIGHT_WHEAT; }
     default int WEIGHT_POTATOES() { return Defaults.WEIGHT_POTATOES; }
@@ -164,18 +170,15 @@ public interface IConfig {
             new ColorSet("Rainbow","red","orange","yellow","lime","green","cyan","light blue","blue","purple","magenta","pink"),
             new ColorSet("Grayscale","FFFFFF","CCCCCC","999999","666666","333333","000000","333333","666666","999999","CCCCCC")
         );
-    }
 
-    class ColorSet {
-        public String name;
-        public List<String> colors;
-        public ColorSet() {
-            this.name = "Unnamed";
-            this.colors = List.of("white");
-        }
-        public ColorSet(String name, String... colors) {
-            this.name = name;
-            this.colors = Arrays.asList(colors);
-        }
+        public static List<HugeTree> HUGE_TREES = Arrays.asList(
+            new HugeTree("Huge Oak Tree", HugeTree.Type.OAK, Blocks.OAK_LOG, Blocks.OAK_LEAVES),
+            new HugeTree("Huge Spruce Tree", HugeTree.Type.SPRUCE, Blocks.SPRUCE_LOG, Blocks.SPRUCE_LEAVES),
+            new HugeTree("Huge Birch Tree", HugeTree.Type.BIRCH, Blocks.BIRCH_LOG, Blocks.BIRCH_LEAVES),
+            new HugeTree("Huge Spruce Tree", HugeTree.Type.JUNGLE, Blocks.JUNGLE_LOG, Blocks.JUNGLE_LEAVES),
+            new HugeTree("Huge Spruce Tree", HugeTree.Type.ACACIA, Blocks.ACACIA_LOG, Blocks.ACACIA_LEAVES),
+            new HugeTree("Huge Spruce Tree", HugeTree.Type.DARK_OAK, Blocks.DARK_OAK_LOG, Blocks.DARK_OAK_LEAVES),
+            new HugeTree("Huge Glass Tree", HugeTree.Type.OAK, Blocks.BROWN_STAINED_GLASS, Blocks.GREEN_STAINED_GLASS)
+        );
     }
 }
